kubernetes/api-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp:
      labels:
        app: api
        io.kompose.service: api
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: production
        - name: USESTHIS_DB_NAME
          valueFrom:
            secretKeyRef:
              key: USESTHIS_PRODUCTION_DB_NAME
              name: usesthis-secrets
        - name: USESTHIS_DB_USER
          valueFrom:
            secretKeyRef:
              key: USESTHIS_DB_USER
              name: usesthis-secrets
        - name: USESTHIS_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: USESTHIS_DB_PASSWORD
              name: usesthis-secrets
        - name: USESTHIS_DB_URL
          valueFrom:
            secretKeyRef:
              key: USESTHIS_PRODUCTION_DB_URL
              name: usesthis-secrets
        image: gcr.io/usesthis-211020/usesthis-api
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /alive
            port: 3000
          initialDelaySeconds: 1
          periodSeconds: 5
        name: api
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /ready
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources: {}
      restartPolicy: Always
status: {}
