kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: api-port
    port: 80
    targetPort: 3000
  selector:
    app: api
  type: ClusterIP
status:
  loadBalancer: {}
