kubernetes/api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: usesthis
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: api
          servicePort: api-port
        path: /graphql
